tests/invalid/test_may_duplicate.err_exp2
test_may_duplicate.m:033: Error: the [38;5;226m`may_duplicate' attribute[39;49m on the
test_may_duplicate.m:033:   foreign_proc [38;5;203mcontradicts[39;49m the [38;5;226m`no_inline' pragma[39;49m on
test_may_duplicate.m:033:   the predicate.
test_may_duplicate.m:055: Error: the [38;5;226m`may_not_duplicate' attribute[39;49m on the
test_may_duplicate.m:055:   foreign_proc [38;5;203mcontradicts[39;49m the [38;5;226m`inline' pragma[39;49m on the
test_may_duplicate.m:055:   predicate.
